--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,10 +4,45 @@
 @import "modules/hello.scss";
 
 body {
-  background: $wtf;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+  // display: grid;
+  background-color: #8edfdf;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100px 1fr 1fr;
+}
+.header {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  background-color: #368181;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  &__text {
+    color: #53bac0;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+  }
+  &__menu {
+  }
+}
+
+.list__name {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+.list__agree {
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+.footer {
+  text-align: center;
+  background-color: #368181;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 52px;
+  margin-bottom: 0;
+  // position: fixed;
+}
+.statistics {
+  grid-column-start: 1;
+  grid-column-end: 4;
 }
