--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,22 +1,21 @@
 @import "~normalize.css";
-
-@import "_variables";
 @import "modules/hello.scss";
 
 body {
   // display: grid;
   background-color: #8edfdf;
+  position: relative;
 }
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100px 1fr 1fr;
+  grid-template-rows: 134px 1fr 1fr;
 }
 .header {
   grid-column-start: 1;
   grid-column-end: 4;
-  background-color: #368181;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-image: url(../assets/img/navigation.svg);
+  // background-color: #368181;
   &__text {
     color: #53bac0;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -25,24 +24,52 @@ body {
   &__menu {
   }
 }
-
-.list__name {
+.list {
+  color: #338a70;
   grid-column-start: 1;
   grid-column-end: 2;
-}
-.list__agree {
-  grid-column-start: 3;
-  grid-column-end: 4;
+  display: block;
+  list-style: none;
+  margin-left: 20px;
+  margin-top: 0;
+  &__active {
+    margin-left: 15px;
+    border-radius: 50%;
+  }
+  &__element {
+    color: #338a70;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+  &__header {
+    color: #338a70;
+  }
 }
 .footer {
+  display: inherit;
+  color: #53bac0;
+  width: 100%;
+  height: 60px;
+  bottom: 0;
+  position: fixed;
+  background-image: url(../assets/img/footer.svg);
   text-align: center;
-  background-color: #368181;
-  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 52px;
-  margin-bottom: 0;
-  // position: fixed;
 }
-.statistics {
-  grid-column-start: 1;
+.statistic {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  grid-column-start: 2;
   grid-column-end: 4;
+  align-items: center;
+  &__text {
+    display: block;
+    color: #338a70;
+    font-size: 48px;
+  }
+  &__image {
+    transition: inherit;
+    display: inherit;
+    // background-color: blue;
+  }
 }
