--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,9 @@
 @import "~normalize.css";
-@import "modules/hello.scss";
 
 body {
   // display: grid;
   background-color: #8edfdf;
+  background-image: url(../assets/img/drops.svg);
   position: relative;
 }
 .grid {
@@ -17,7 +17,7 @@ body {
   background-image: url(../assets/img/navigation.svg);
   // background-color: #368181;
   &__text {
-    color: #53bac0;
+    color: #66d5dc;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
   }
@@ -30,46 +30,88 @@ body {
   grid-column-end: 2;
   display: block;
   list-style: none;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-top: 0;
+  min-width: 120px;
   &__active {
-    margin-left: 15px;
-    border-radius: 50%;
+    margin-right: 10px;
+    float: left;
   }
   &__element {
-    color: #338a70;
     margin-top: 10px;
     margin-bottom: 0;
+    font-size: 16px;
   }
   &__header {
     color: #338a70;
+    margin-bottom: 40px;
   }
 }
 .footer {
-  display: inherit;
-  color: #53bac0;
+  display: flex;
+  color: #66d5dc;
   width: 100%;
   height: 60px;
   bottom: 0;
   position: fixed;
   background-image: url(../assets/img/footer.svg);
-  text-align: center;
+  align-items: flex-end;
+  justify-content: center;
 }
 .statistic {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   grid-column-start: 2;
   grid-column-end: 4;
   align-items: center;
+
   &__text {
-    display: block;
-    color: #338a70;
+    // display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0em;
+    width: 150px;
+    height: 150px;
+    color: #367488;
     font-size: 48px;
+    background-image: url(../assets/img/drop.svg);
+    background-position: center;
+    background-repeat: no-repeat;
   }
-  &__image {
-    transition: inherit;
-    display: inherit;
-    // background-color: blue;
+}
+.btnAdd {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  &--style {
+    width: 110px;
+    height: 110px;
+    background: no-repeat;
+    border: none;
+    background-image: url(../assets/img/add_button.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+}
+.btnRemove {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  &--style {
+    width: 80px;
+    height: 80px;
+    background: no-repeat;
+    border: none;
+    background-image: url(../assets/img/remove_button.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    touch-action: manipulation;
   }
 }
