--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,10 @@
 @import "~normalize.css";
+@import "modules/variables.scss";
 
 body {
   // display: grid;
   background-color: #8edfdf;
-  background-image: url(../assets/img/drops.svg);
+  background-image: var(--drops);
   position: relative;
 }
 .grid {
