--- a/src/scss/modules/variables.scss
+++ b/src/scss/modules/variables.scss
@@ -1,3 +1,5 @@
 :root {
-  --drops: url(../assets/img/drops.svg);
+  --active: url(../assets/img/drops.svg);
+  --pasiv: none;
+  --drops: --active;
 }
