--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,8 @@
 body {
   // display: grid;
   background-color: #8edfdf;
-  background-image: none;
+  background-image: var(--drops);
+
   position: relative;
 }
 .grid {
